# prettymol

./: .gitignore  LICENSE  environment.devenv.yml  environment.yml  examples_from_web.py  pyproject.toml  scenes.py  setup.cfg  setup.py
conda/units/: cheminformatics.devenv.yaml  deepsvg.devenv.yaml  manim-community.devenv.yaml  manimgl.devenv.yaml  video.devenv.yaml  videos.devenv.yaml
data/artemisinin/: Conformer3D_CID_68827.sdf  Structure2D_CID_68827.sdf  compound_CID_68827.json
manimchem/: rdkit_utils.py  scenes.py
prettymol/: _version.py  config.py  manim_utils.py  rdkit_utils.py  scenes.py
prettymol/scenes/: artemisinin_and_morgan_fingerprints.py  language_of_life.py  language_of_life2.py
