[metadata]
name = prettymol
url = https://github.com/bayer-science-for-a-better-life/prettymol
download_url = https://github.com/bayer-science-for-a-better-life/prettymol
license = BSD-3-Clause
license_file = LICENSE
description = Charming molecules
long_description = file: README.md
long_description_content_type = text/markdown
author = Santiago Villalba
author_email = sdvillal@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD 3-Clause "New" or "Revised" License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages = find:
python_requires = >=3.8
install_requires =
    manimgl

[options.package_data]
prettymol =

[options.extras_require]
dev =
    pytest>=6
    pytest-cov
    mypy

docs =
    sphinx
    sphinxemoji
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    prettymol = prettymol.__main__:main

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
